--- a/style.css
+++ b/style.css
@@ -17,13 +17,13 @@
 }
 
 .container {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   display: flex;
   min-height: 100vh;
   align-items: center;
   justify-content: center;
-  background: rgb(238,174,202);
-  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+  background: rgb(238, 174, 202);
+  background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
 }
 
 .card {
@@ -98,7 +98,7 @@
 }
 
 .card__separator:before {
-  content: '';
+  content: "";
   position: absolute;
   width: 100%;
   height: 1px;
